2022-02-17  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Enable GTK and Windows queues for PRs
        https://bugs.webkit.org/show_bug.cgi?id=236814
        <rdar://problem/89117205>

        Reviewed by Ryan Haddad.

        * CISupport/ews-build/config.json:

2022-02-21  Sihui Liu  <sihui_liu@apple.com>

        Fetching website data may get wrong record after migrating data to general storage directory
        https://bugs.webkit.org/show_bug.cgi?id=236905

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
        (TEST):

2022-02-20  Sihui Liu  <sihui_liu@apple.com>

        Origin file may not be created after migrating data to general storage directory
        https://bugs.webkit.org/show_bug.cgi?id=236901

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
        (TEST):

2022-02-20  Brandon Stewart  <brandonstewart@apple.com>

        Generate compile_commands.json on macOS Builds
        https://bugs.webkit.org/show_bug.cgi?id=235686

        Reviewed by Saam Barati.

        Add support for generating compile_commands.json file to WebKit.

        compile_commands.json can be used by tools like clangd to provide code complete,
        refactoring, formatting, and cross references.
        
        Steps to generate the compile commands file:
        make d EXPORT_COMPILE_COMMANDS=YES
        generate-compile-commands WebKitBuild/Debug

        * Scripts/build-jsc:
        * Scripts/build-webkit:
        * Scripts/generate-compile-commands: Added.

2022-02-17  Jonathan Bedard  <jbedard@apple.com>

        [EWS] Enable iOS Simulator queues for PRs
        https://bugs.webkit.org/show_bug.cgi?id=236816
        <rdar://problem/89117393>

        Reviewed by Ryan Haddad.

        * CISupport/ews-build/config.json:

2022-02-20  Philippe Normand  <pnormand@igalia.com>

        REGRESSION(r289470): [Flatpak SDK] Broken local SDK handling