@@ -793,7 +793,7 @@ class TestRunWebKitTests(BuildStepMixinAdditions, unittest.TestCase):
                 workdir='wkdir',
                 timeout=1200,
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'iOS-14-Simulator-WK2-Tests-EWS',
                          '--build-number', '101', '--buildbot-worker', 'ews100',
@@ -817,7 +817,7 @@ class TestRunWebKitTests(BuildStepMixinAdditions, unittest.TestCase):
                 workdir='wkdir',
                 timeout=1200,
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'iOS-14-Simulator-WK2-Tests-EWS',
                          '--build-number', '101', '--buildbot-worker', 'ews100',
@@ -844,7 +844,7 @@ class TestRunWebKitTests(BuildStepMixinAdditions, unittest.TestCase):
                 workdir='wkdir',
                 timeout=1200,
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'iOS-14-Simulator-WK2-Tests-EWS',
                          '--build-number', '101', '--buildbot-worker', 'ews100',
@@ -869,7 +869,7 @@ class TestRunWebKitTests(BuildStepMixinAdditions, unittest.TestCase):
                 workdir='wkdir',
                 timeout=1200,
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'iOS-14-Simulator-WK2-Tests-EWS',
                          '--build-number', '101', '--buildbot-worker', 'ews100',
@@ -894,7 +894,7 @@ class TestRunWebKitTests(BuildStepMixinAdditions, unittest.TestCase):
                 workdir='wkdir',
                 timeout=1200,
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'iOS-14-Simulator-WK2-Tests-EWS',
                          '--build-number', '101', '--buildbot-worker', 'ews100',
@@ -936,7 +936,7 @@ class TestRunWebKit1Tests(BuildStepMixinAdditions, unittest.TestCase):
             ExpectShell(
                 workdir='wkdir',
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'Apple-iOS-14-Simulator-Debug-Build',
                          '--build-number', '101', '--buildbot-worker', 'bot100',
@@ -959,7 +959,7 @@ class TestRunWebKit1Tests(BuildStepMixinAdditions, unittest.TestCase):
             ExpectShell(
                 workdir='wkdir',
                 logEnviron=False,
-                command=['python', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
+                command=['python3', 'Tools/Scripts/run-webkit-tests', '--no-build', '--no-show-results',
                          '--no-new-test-results', '--clobber-old-results',
                          '--builder-name', 'Apple-iOS-14-Simulator-Debug-Build',
                          '--build-number', '101', '--buildbot-worker', 'bot100',
